--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </body>
 <!--pie de pagina-->
 <footer>
-    <p class="copyrigth">&copy; copyrigth 2024- Encriptador de texto - desarrollado por LauraDev</p>
+    <p class="copyrigth">&copy; copyright 2024- Encriptador de texto - desarrollado por LauraDev</p>
     <a href="https://github.com/Laura-dev487">
         <img src="./imagenes/github.png" alt="logo github" class="github">
     </a>
